# video-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
audio/: __init__.py  mixer.py  tts.py
config/: __init__.py  settings.py  settings.yaml
crawler/: scraper.py  storage.py
image_gen/: character_gen.py  comfyui_client.py
llm/: character_extractor.py  client.py  constraint_validator.py  gatekeeper.py  hook_extractor.py  hook_judge.py  profile_builder.py  script_reviewer.py  scriptwriter.py  summarizer.py
models/: __init__.py  schemas.py
pipeline/: alignment_report.py  orchestrator.py  state.py  validator.py  vram_manager.py
plans/: activity-confirm.md  architecture.md  attention-contrains-system-upgrade.md  build-characters-from-db.md  character-memory-system.md  fix-anchor-to-video-quality-chain.md  image-narration-mismatch-resolving.md  implement-pipeline.md  improve-image.md  improve-retention.md  initial.md  issues.md  retention-optimization.md  use-llm-to-enhance-image-prompt.md  visual-brief-enrichment.md
scripts/: backfill_constraint_fields.py  build_anchor.py  preview_prompts.py  retention_report.py
tests/: conftest.py  test_audio.py  test_character_gen.py  test_constraint_validator.py  test_crawler.py  test_frame_decomposer.py  test_gatekeeper.py  test_hook_extractor.py  test_hook_judge.py  test_llm.py  test_mixer.py  test_pipeline.py  test_video.py
video/: assembler.py  editor.py  frame_decomposer.py
(+28 files in other folders)
