[project]
name = "video-pipeline"
version = "0.1.0"
description = "Batch pipeline sản xuất video 60s (9:16 Shorts/TikTok) từ nguồn truyện online"
requires-python = ">=3.12"

dependencies = [
    # Config
    "pydantic>=2.0.0",
    "pydantic-settings[yaml]>=2.3.0",
    # HTTP
    "httpx>=0.25.0",
    # HTML parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # Retry
    "tenacity>=8.2.0",
    # Logging
    "loguru>=0.7.0",
    # TTS
    "edge-tts>=6.1.0",
    # Video/Audio processing
    "ffmpeg-python>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
